k8/app-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: app-service

spec:
  selector:
    component: fastapi-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
