k8/pgadmin-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: pgadmin-service

spec:
  selector:
    component: pgadmin

  type: ClusterIP

  ports:
    - port: 5050
      targetPort: 5050
